Fix overflow when numbers are too big

--- a/style/style.css
+++ b/style/style.css
@@ -145,6 +145,7 @@ body{
 
 #table {
     display: flex;
+    max-width: 380px;
     flex-direction: column-reverse;
     gap: 10px;
     border: 2px solid black;
